# AlgebraStuff

./: CMakeLists.txt  Coset.h  GSession.h  OneOpAlgebraic.h  README.md  Set.h  main.cpp  out.i  session.h
Algebra/: CosetAlgos.cpp  CosetAlgos.h  GroupAlgos.cpp  GroupAlgos.h  SetAlgos.cpp  SetAlgos.h
GroupFactory/: Cyclic.cpp  Cyclic.h  Dihedral.cpp  Dihedral.h  K4.cpp  K4.h  Permutation.cpp  Permutation.h  ProductElement.cpp  ProductElement.h  Quaternions.cpp  Quaternions.h
Menus/: cosetMenu.cpp  cosetMenu.h  factorGroupMenu.cpp  factorGroupMenu.h  groupInfoMenu.cpp  groupInfoMenu.h  mGroupMenu.cpp  mGroupMenu.h  propertyMenu.cpp  propertyMenu.h  runMenu.cpp  runMenu.h  selectFamMenu.h  smallhelpers.cpp  smallhelpers.h  subgroupMenu.cpp  subgroupMenu.h
